Fixed flashcard vertical overflow. Applied overflow-y: auto to the flashcard markdown container. Also added bottom padding to account for flashcard hint, when hint is shown.

--- a/src/components/Flashcard/Flashcard.module.scss
+++ b/src/components/Flashcard/Flashcard.module.scss
@@ -76,11 +76,10 @@
   }
 
   &__markdown {
-    max-height: 100%;
-    min-height: 380px;
+    // max-height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     overflow-y: auto;
     touch-action: pan-y;
   }
@@ -89,7 +88,6 @@
     position: absolute;
     bottom: 0;
     padding: 10px;
-    padding-bottom: 20px;
     opacity: 60%;
     user-select: none;
     transition: opacity 0.3s ease;
@@ -105,11 +103,16 @@
   height: 100%;
   backface-visibility: hidden;
   box-sizing: border-box;
-  padding: 20px;
+  padding: 20px; // y-padding scales with font-size of hint
+
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  &__hint {
+    padding-bottom: calc(30px + 1.25vmin);
+  }
 }
 
 .flashcard__front {
